[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "privacy-ledger"
version = "0.1.0"
description = "Privacy events tracker"
requires-python = ">=3.10"

dependencies = [
    "asyncpg==0.31.0",
    "pydantic>=2.12.5, <3.0.0",
    "smartscan @ git+https://github.com/smartscanapp/smartscan-lib.git@1.0.1",
    "pytest==9.0.2",
    "pytest-asyncio",
]

[project.optional-dependencies]
api = [
    "fastapi[standard]"  
]

[tool.setuptools]
packages = ["privacy_ledger", "api"]